sidebar on dashboard goes out further now. unaligned lines no longer show

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -599,7 +599,7 @@ div.rounded-box a img {
 }
 
 .openSidebar {
-    width: 40vw;
+    width: 45vw;
 }
 
 .sidebar .closebtn {
